fix navbar on mobile view

--- a/assets/scss/mobile.scss
+++ b/assets/scss/mobile.scss
@@ -73,6 +73,7 @@
     background-color: rgba(158,72,49,0.45);
     box-shadow: 0 2px 10px rgba(104,42,26,0.3);
     padding: 12px 0;
+    height: 66px;
     .container {
       flex-direction: row;
       justify-content: space-between;
